# Whisper

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
crates/ast/: Cargo.toml
crates/ast/src/: expr.rs  lib.rs  module.rs  ops.rs  stmt.rs  types.rs
crates/checker/: Cargo.toml
crates/checker/src/: lib.rs  resolver.rs  scope.rs
crates/common/: Cargo.toml
crates/common/src/: annotations.rs  effects.rs  lib.rs  literal.rs  module.rs  ops.rs  structs.rs  types.rs
crates/js/: Cargo.toml
crates/js-codegen/: Cargo.toml
crates/js-codegen/src/: lib.rs  namegen.rs
crates/js/src/: lib.rs
crates/js/src/ast/: expr.rs  literal.rs  mod.rs  ops.rs  program.rs  stmt.rs  types.rs
crates/js/src/codegen/: mod.rs
crates/js/src/transformer/: mod.rs  resolver.rs
crates/lexer/src/: cursor.rs  lib.rs  stream.rs  token.rs
crates/lexer/tests/: cursor.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs
crates/tcast/: Cargo.toml
crates/tcast/src/: expr.rs  lib.rs  module.rs  namespace.rs  ops.rs  stmt.rs  types.rs
crates/wrc/: Cargo.toml
crates/wrc/src/: args.rs  main.rs
crates/wrc/src/commands/: compile.rs
ebnf/: expression.ebnf  statement.ebnf
examples/: hello_world.wr  structs.wr
examples/io/: mod.wr
